# YHModsManager

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  README.md  README_EN.md  build.py  main.py  mods_manager.spec  requirements.txt  version.json
config/: app_info.json  log_config.json  ui_constants.json
config/i18n/: de_DE.json  en_US.json  fr_FR.json  ja_JP.json  ko_KR.json  ru_RU.json  zh_CN.json  zh_TW.json
config/styles/: badges.qss  buttons.qss  groupbox.qss  info_panel.qss  main.qss  settings.qss  toast.qss
config/themes/: dark.json  default.json
core/: __init__.py  config_manager.py  dependency_resolver.py  event_bus.py  highlight_rule_manager.py  id_comparer.py  json_serializer.py  manager_collection.py  metadata_manager.py  mod_filter_manager.py  mod_manager.py  mod_operations.py  mod_parser.py  mod_service.py  mod_types.py  serializers.py  user_config_manager.py
docs/: PLUGIN_DEVELOPMENT.md  插件开发指南.md
plugin_system/: __init__.py  plugin_base.py  plugin_events.py  plugin_loader.py  plugin_ui.py
scripts/: create_icon.py  pack_plugins.py
services/: __init__.py  steam_service.py  update_service.py
ui/: __init__.py  dependency_lines.py  draggable_list.py  i18n.py  styles.py  theme_manager.py  toast_widget.py
ui/dialogs/: __init__.py  about_dialog.py  game_settings_dialog.py  search_tags_dialog.py  settings_dialog.py  update_dialog.py  validation_result_dialog.py
utils/: __init__.py  app_logger.py  crash_handler.py  debouncer.py  file_utils.py  icons.py  list_selection.py  mod_ui_utils.py  profile_serializer.py  search.py  steam_detector.py
workers/: scan_worker.py
yh_mods_manager_sdk/: README.md  __init__.py  config.py  enum_extension.py  enum_types.py  events.py  menu.py  mod.py  plugin_base.py  plugin_packer.py  protocols.py  pyproject.toml  utils.py
(+24 files in other folders)
